[package]
name = "pms"
version = "0.1.0"
authors = ["patho"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = "0.4.6"
serde = { version = "1.0.118", features = ["derive"] }
xml-rs = "0.8.3"
serde-xml-rs = "0.4.0"