[package]
name = "pms"
version = "0.1.0"
authors = ["patho"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = "0.4.6"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
chrono = {version="0.4.19",features=["serde"]}
log = "0.4.11"
fast_log = "1.3.13"
xml-rs = "0.8.3"
serde-xml-rs = "0.4.0"
rbatis = {version = "1.8.52"}
rbatis-macro-driver = {version="1.8.52"}
lazy_static = "1.4.0"
async-std = {version="1.8.0"}